added A* and heap

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,3 +1,5 @@
-/AStar.class
-/Board.class
-/MyClient.class
+/PMyriorityQueue.class
+/MyPriorityQueue.class
+/IHeapItem.class
+/HeapItem.class
+/Node.class
