--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/Kalina/workspace/YakipGit/Libraries/lwjgl.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Kalina/workspace/YakipGit/Libraries/yakip.jar"/>
+	<classpathentry kind="lib" path="D:/Yakip/Libraries/yakip.jar"/>
+	<classpathentry kind="lib" path="D:/Yakip/Libraries/lwjgl.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
